# atdl_forge

./: .gitignore  ATDL_Forge.py  FIX_ATDL.py  LICENSE  README.md  build.spec  main.py  pyproject.toml
atdl_forge/: __init__.py
atdl_forge/core/: __init__.py  atdl_parser.py  fix_generator.py  models.py
atdl_forge/ui/: __init__.py  main_window.py  parameter_details_panel.py  parameter_form.py
atdl_forge/ui/components/: __init__.py  fix_output_panel.py  strategy_navigator.py  toolbar.py
atdl_forge/ui/theme/: __init__.py  light_oms.qss
atdl_forge/ui/widgets/: __init__.py  control_factory.py
